fixed some styling to better fit mobile, added translucent panel behind headshot

--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ html{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgba(245, 245, 245, 0.5);
+  background-color: rgba(224, 221, 255, 0.5);
   border-radius: 50%;
   margin: 3rem;
   padding: 3rem;
